--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,20 @@
   </dependencies>
 
   <build>
+    <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.1</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.apache.maven.shared</groupId>
+              <artifactId>maven-invoker</artifactId>
+              <version>2.2</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+    </plugins>
      </plugin>
       <plugin>
         <groupId>io.spring.javaformat</groupId>
@@ -168,7 +182,7 @@
             <phase>validate</phase>
           </execution>
         </executions>
-      </plugin>
+       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
