--- a/pom.xml
+++ b/pom.xml
@@ -153,21 +153,13 @@
     </dependency>
 
   </dependencies>
-
-  <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.1</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.maven.shared</groupId>
-              <artifactId>maven-invoker</artifactId>
-              <version>2.2</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-    </plugins>
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+         <version>3.5.0</version>
+      </plugin>
     <plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
