--- a/pom.xml
+++ b/pom.xml
@@ -161,9 +161,9 @@
          <version>3.5.0</version>
       </plugin>
     <plugin>
-        <groupId>io.spring.javaformat</groupId>
-        <artifactId>spring-javaformat-maven-plugin</artifactId>
-        <version>${spring-format.version}</version>
+       <groupId>io.spring.javaformat</groupId>
+    <artifactId>spring-javaformat-maven-plugin</artifactId>
+    <version>0.0.43</version>
         <executions>
           <execution>
             <goals>
