--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,16 @@
         <version>3.4.2</version>
       </plugin>
       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.11.0</version> <!-- Compatible with Java 17 -->
+        <configuration>
+          <source>${java.version}</source>
+         <target>${java.version}</target>
+         <release>${java.version}</release>
+       </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.10</version>
