--- a/pom.xml
+++ b/pom.xml
@@ -177,15 +177,15 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>3.4.2</version>
       </plugin>
-      <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.11.0</version> <!-- Compatible with Java 17 -->
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
         <configuration>
-          <source>${java.version}</source>
-         <target>${java.version}</target>
-         <release>${java.version}</release>
-       </configuration>
+          <source>17</source>
+          <target>17</target>
+          <release>17</release>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
