--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,12 @@
       <name>Spring Milestones</name>
       <url>https://repo.spring.io/milestone</url>
     </pluginRepository>
+    <repositories>
+    <repository>
+    <id>central</id>
+    <url>https://repo.maven.apache.org/maven2</url>
+  </repository>
+   </repositories>
   </pluginRepositories>
 
   <profiles>
